--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+bads.txt
+GyazoChecker.zip
+GyazoChecker/combos.txt
+GyazoChecker/GyazoChecker.exe
+GyazoChecker/proxies.txt
