--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,5 @@ GyazoChecker.zip
 GyazoChecker/combos.txt
 GyazoChecker/GyazoChecker.exe
 GyazoChecker/proxies.txt
+GyazoChecker/useragents.txt
+output/GyazoChecker.exe
